@@ -634,12 +634,6 @@ implementations. You should use this flag to detect and fix such
 invalid formats, as they will be rejected by future OCaml versions.
 
 \notop{%
-\item["-thread"]
-Compile or link multithreaded programs, in combination with the
-system "threads" library described in chapter~\ref{c:threads}.
-}%notop
-
-\notop{%
 \item["-unboxed-types"]
 When a type is unboxable (i.e. a record with a single argument or a
 concrete datatype with a single constructor of one argument) it will
