@@ -37,8 +37,6 @@ PLUGINS=plugin.so plugin2.so sub/plugin.so sub/plugin3.so plugin4.so \
         plugin_high_arity.so plugin_ext.so plugin_simple.so bug.so \
         plugin_thread.so plugin4_unix.so a.so b.so c.so
 
-ADD_COMPFLAGS=-thread
-
 .PHONY: compile
 compile: $(PLUGINS) main$(EXE) mylib.so
 
@@ -50,7 +48,7 @@ run:
 	&& echo " => passed" || echo " => failed"
 
 main$(EXE): api.cmx main.cmx
-	@$(OCAMLOPT) -thread -o main$(EXE) -linkall unix.cmxa threads.cmxa \
+	@$(OCAMLOPT) -I +threads -o main$(EXE) -linkall unix.cmxa threads.cmxa \
 	             dynlink.cmxa api.cmx main.cmx
 
 main_ext$(EXE): api.cmx main.cmx factorial.$(O)
